feat: changed pools stats endpoint
