# api/generated/oas_validators_gen.go
@@ -72,6 +72,29 @@ func (s *BlockchainMarkets) Validate() error {
 	return nil
 }
 
+func (s *BlockchainPool) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if err := s.Info.Validate(); err != nil {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "info",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
 func (s *BlockchainPrice) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
@@ -459,20 +482,37 @@ func (s *PoolStatsPoints) Validate() error {
 	return nil
 }
 
-func (s *PoolsStatsList) Validate() error {
+func (s *PoolsList) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
 	}
 
 	var failures []validate.FieldError
 	if err := func() error {
-		if s.Stats == nil {
+		if s.Pools == nil {
 			return errors.New("nil is invalid value")
+		}
+		var failures []validate.FieldError
+		for i, elem := range s.Pools {
+			if err := func() error {
+				if err := elem.Validate(); err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				failures = append(failures, validate.FieldError{
+					Name:  fmt.Sprintf("[%d]", i),
+					Error: err,
+				})
+			}
+		}
+		if len(failures) > 0 {
+			return &validate.Error{Fields: failures}
 		}
 		return nil
 	}(); err != nil {
 		failures = append(failures, validate.FieldError{
-			Name:  "stats",
+			Name:  "pools",
 			Error: err,
 		})
 	}
