# api/swagger.yaml
@@ -78,21 +78,21 @@ paths:
                   properties:
                     code:
                       example: 'get_blockchain_markets_error'
-  /pools/stats:
+  /pools:
     get:
       tags:
         - pools
-      summary: Get pool statistics for all blockchains
-      operationId: getPoolsStats
+      summary: Get pool info and statistics for all blockchains
+      operationId: getPools
       responses:
         '200':
-          description: 'Pool stats list response'
+          description: 'Pools list response'
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PoolsStatsList'
+                $ref: '#/components/schemas/PoolsList'
         '500':
-          description: 'Get pools stats error'
+          description: 'Get pools error'
           content:
             application/json:
               schema:
@@ -101,7 +101,7 @@ paths:
                 - type: object
                   properties:
                     code:
-                      example: 'get_pools_stats_error'
+                      example: 'get_pools_error'
   /pools/{blockchain}:
     get:
       tags:
@@ -1154,25 +1154,25 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/PoolSlave'
-    BlockchainPoolStats:
+    BlockchainPool:
       type: object
       required:
-        - blockchain
+        - info
         - stats
       properties:
-        blockchain:
-          type: string
+        info:
+          $ref: '#/components/schemas/PoolInfo'
         stats:
           $ref: '#/components/schemas/PoolStats'
-    PoolsStatsList:
+    PoolsList:
       type: object
       required:
-        - stats
+        - pools
       properties:
-        stats:
+        pools:
           type: array
           items:
-            $ref: '#/components/schemas/BlockchainPoolStats'
+            $ref: '#/components/schemas/BlockchainPool'
     Miner:
       type: object
       required:
